deploy: 03908ee1af7928d346ac46eff7a0b37081378567

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -150,8 +150,73 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#B"><strong>B</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
+ | <a href="#G"><strong>G</strong></a>
+ | <a href="#L"><strong>L</strong></a>
  
 </div>
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="competitors.html#elote.competitors.dwz.DWZCompetitor.beat">beat() (elote.competitors.dwz.DWZCompetitor method)</a>
+
+      <ul>
+        <li><a href="competitors.html#elote.competitors.ecf.ECFCompetitor.beat">(elote.competitors.ecf.ECFCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.elo.EloCompetitor.beat">(elote.competitors.elo.EloCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.ensemble.BlendedCompetitor.beat">(elote.competitors.ensemble.BlendedCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.glicko.GlickoCompetitor.beat">(elote.competitors.glicko.GlickoCompetitor method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="competitors.html#elote.competitors.ensemble.BlendedCompetitor">BlendedCompetitor (class in elote.competitors.ensemble)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="competitors.html#elote.competitors.dwz.DWZCompetitor">DWZCompetitor (class in elote.competitors.dwz)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="competitors.html#elote.competitors.ecf.ECFCompetitor">ECFCompetitor (class in elote.competitors.ecf)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="competitors.html#elote.competitors.elo.EloCompetitor">EloCompetitor (class in elote.competitors.elo)</a>
+</li>
+      <li><a href="arenas.html#elote.arenas.lambda_arena.LambdaArena.expected_score">expected_score() (elote.arenas.lambda_arena.LambdaArena method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="competitors.html#elote.competitors.glicko.GlickoCompetitor">GlickoCompetitor (class in elote.competitors.glicko)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.lambda_arena.LambdaArena">LambdaArena (class in elote.arenas.lambda_arena)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 
 
            </div>
