--- a/html/genindex.html
+++ b/html/genindex.html
@@ -155,6 +155,10 @@
  | <a href="#E"><strong>E</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#L"><strong>L</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#R"><strong>R</strong></a>
+ | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
  
 </div>
 <h2 id="B">B</h2>
@@ -192,12 +196,38 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="competitors.html#elote.competitors.ecf.ECFCompetitor">ECFCompetitor (class in elote.competitors.ecf)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="competitors.html#elote.competitors.elo.EloCompetitor">EloCompetitor (class in elote.competitors.elo)</a>
 </li>
       <li><a href="arenas.html#elote.arenas.lambda_arena.LambdaArena.expected_score">expected_score() (elote.arenas.lambda_arena.LambdaArena method)</a>
+
+      <ul>
+        <li><a href="competitors.html#elote.competitors.dwz.DWZCompetitor.expected_score">(elote.competitors.dwz.DWZCompetitor method)</a>
 </li>
+        <li><a href="competitors.html#elote.competitors.ecf.ECFCompetitor.expected_score">(elote.competitors.ecf.ECFCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.elo.EloCompetitor.expected_score">(elote.competitors.elo.EloCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.ensemble.BlendedCompetitor.expected_score">(elote.competitors.ensemble.BlendedCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.glicko.GlickoCompetitor.expected_score">(elote.competitors.glicko.GlickoCompetitor method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.lambda_arena.LambdaArena.export_state">export_state() (elote.arenas.lambda_arena.LambdaArena method)</a>
+
+      <ul>
+        <li><a href="competitors.html#elote.competitors.dwz.DWZCompetitor.export_state">(elote.competitors.dwz.DWZCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.ecf.ECFCompetitor.export_state">(elote.competitors.ecf.ECFCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.elo.EloCompetitor.export_state">(elote.competitors.elo.EloCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.ensemble.BlendedCompetitor.export_state">(elote.competitors.ensemble.BlendedCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.glicko.GlickoCompetitor.export_state">(elote.competitors.glicko.GlickoCompetitor method)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -213,6 +243,56 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="arenas.html#elote.arenas.lambda_arena.LambdaArena">LambdaArena (class in elote.arenas.lambda_arena)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.lambda_arena.LambdaArena.leaderboard">leaderboard() (elote.arenas.lambda_arena.LambdaArena method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.lambda_arena.LambdaArena.matchup">matchup() (elote.arenas.lambda_arena.LambdaArena method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="competitors.html#elote.competitors.ecf.ECFCompetitor.rating">rating() (elote.competitors.ecf.ECFCompetitor property)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.lambda_arena.LambdaArena.set_competitor_class_var">set_competitor_class_var() (elote.arenas.lambda_arena.LambdaArena method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="competitors.html#elote.competitors.dwz.DWZCompetitor.tied">tied() (elote.competitors.dwz.DWZCompetitor method)</a>
+
+      <ul>
+        <li><a href="competitors.html#elote.competitors.ecf.ECFCompetitor.tied">(elote.competitors.ecf.ECFCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.elo.EloCompetitor.tied">(elote.competitors.elo.EloCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.ensemble.BlendedCompetitor.tied">(elote.competitors.ensemble.BlendedCompetitor method)</a>
+</li>
+        <li><a href="competitors.html#elote.competitors.glicko.GlickoCompetitor.tied">(elote.competitors.glicko.GlickoCompetitor method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.lambda_arena.LambdaArena.tournament">tournament() (elote.arenas.lambda_arena.LambdaArena method)</a>
 </li>
   </ul></td>
 </tr></table>
