--- a/html/_modules/elote/competitors/glicko.html
+++ b/html/_modules/elote/competitors/glicko.html
@@ -156,7 +156,7 @@
     <span class="n">_c</span> <span class="o">=</span> <span class="mi">1</span>
     <span class="n">_q</span> <span class="o">=</span> <span class="mf">0.0057565</span>
 
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">initial_rating</span><span class="o">=</span><span class="mi">1500</span><span class="p">,</span> <span class="n">initial_rd</span><span class="o">=</span><span class="mi">350</span><span class="p">):</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">initial_rating</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mi">1500</span><span class="p">,</span> <span class="n">initial_rd</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mi">350</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;from http://www.glicko.net/glicko/glicko.pdf</span>
 
 <span class="sd">        class vars:</span>
@@ -199,11 +199,13 @@
     <span class="k">def</span> <span class="nf">_g</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">x</span><span class="p">):</span>
         <span class="k">return</span> <span class="mi">1</span> <span class="o">/</span> <span class="p">(</span><span class="n">math</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="mi">1</span> <span class="o">+</span> <span class="mi">3</span> <span class="o">*</span> <span class="bp">cls</span><span class="o">.</span><span class="n">_q</span> <span class="o">**</span> <span class="mi">2</span> <span class="o">*</span> <span class="p">(</span><span class="n">x</span> <span class="o">**</span> <span class="mi">2</span><span class="p">)</span> <span class="o">/</span> <span class="n">math</span><span class="o">.</span><span class="n">pi</span> <span class="o">**</span> <span class="mi">2</span><span class="p">))</span>
 
-<div class="viewcode-block" id="GlickoCompetitor.expected_score"><a class="viewcode-back" href="../../../competitors.html#elote.competitors.glicko.GlickoCompetitor.expected_score">[docs]</a>    <span class="k">def</span> <span class="nf">expected_score</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">competitor</span><span class="p">):</span>
+<div class="viewcode-block" id="GlickoCompetitor.expected_score"><a class="viewcode-back" href="../../../competitors.html#elote.competitors.glicko.GlickoCompetitor.expected_score">[docs]</a>    <span class="k">def</span> <span class="nf">expected_score</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">competitor</span><span class="p">:</span> <span class="n">BaseCompetitor</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        The expected outcome of a match between this competitor and one passed in. Scaled between 0-1, where 1 is a strong</span>
+<span class="sd">        likelihood of this competitor winning and 0 is a strong likelihood of this competitor losing.</span>
 
-<span class="sd">        :param competitor:</span>
-<span class="sd">        :return:</span>
+<span class="sd">        :param competitor: another EloCompetitor to compare this competitor to.</span>
+<span class="sd">        :return: likelihood to beat the passed competitor, as a float 0-1.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">verify_competitor_types</span><span class="p">(</span><span class="n">competitor</span><span class="p">)</span>
@@ -212,9 +214,12 @@
         <span class="n">E</span> <span class="o">=</span> <span class="mi">1</span> <span class="o">/</span> <span class="p">(</span><span class="mi">1</span> <span class="o">+</span> <span class="mi">10</span> <span class="o">**</span> <span class="p">((</span><span class="o">-</span><span class="mi">1</span> <span class="o">*</span> <span class="n">g_term</span> <span class="o">*</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">rating</span> <span class="o">-</span> <span class="n">competitor</span><span class="o">.</span><span class="n">rating</span><span class="p">))</span><span class="o">/</span><span class="mi">400</span><span class="p">))</span>
         <span class="k">return</span> <span class="n">E</span></div>
 
-<div class="viewcode-block" id="GlickoCompetitor.beat"><a class="viewcode-back" href="../../../competitors.html#elote.competitors.glicko.GlickoCompetitor.beat">[docs]</a>    <span class="k">def</span> <span class="nf">beat</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">competitor</span><span class="p">):</span>
+<div class="viewcode-block" id="GlickoCompetitor.beat"><a class="viewcode-back" href="../../../competitors.html#elote.competitors.glicko.GlickoCompetitor.beat">[docs]</a>    <span class="k">def</span> <span class="nf">beat</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">competitor</span><span class="p">:</span> <span class="n">BaseCompetitor</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        takes in a competitor object that lost, updates both&#39;s scores.</span>
+<span class="sd">        Takes in a competitor object that lost a match to this competitor, updates the ratings for both.</span>
+
+<span class="sd">        :param competitor: the competitor that lost thr bout</span>
+<span class="sd">        :type competitor: GlickoCompetitor</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">verify_competitor_types</span><span class="p">(</span><span class="n">competitor</span><span class="p">)</span>
@@ -240,11 +245,12 @@
         <span class="n">competitor</span><span class="o">.</span><span class="n">rating</span> <span class="o">=</span> <span class="n">c_new_r</span>
         <span class="n">competitor</span><span class="o">.</span><span class="n">rd</span> <span class="o">=</span> <span class="n">c_new_rd</span></div>
 
-<div class="viewcode-block" id="GlickoCompetitor.tied"><a class="viewcode-back" href="../../../competitors.html#elote.competitors.glicko.GlickoCompetitor.tied">[docs]</a>    <span class="k">def</span> <span class="nf">tied</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">competitor</span><span class="p">):</span>
+<div class="viewcode-block" id="GlickoCompetitor.tied"><a class="viewcode-back" href="../../../competitors.html#elote.competitors.glicko.GlickoCompetitor.tied">[docs]</a>    <span class="k">def</span> <span class="nf">tied</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">competitor</span><span class="p">:</span> <span class="n">BaseCompetitor</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Takes in a competitor object that tied in a match to this competitor, updates the ratings for both.</span>
 
-<span class="sd">        :param competitor:</span>
-<span class="sd">        :return:</span>
+<span class="sd">        :param competitor: the competitor that tied with this one</span>
+<span class="sd">        :type competitor: GlickoCompetitor</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">verify_competitor_types</span><span class="p">(</span><span class="n">competitor</span><span class="p">)</span>
